# domain-checker

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  build_extra_scripts_get_whois_server_list.yml  build_extra_scripts_travellings_cn_api_main.yml  build_main.yml  check_travellings_cn_project.yml  fast_check_travellings_cn_project.yml  test.yml
build-scripts/: build_with_nuitka.bat  build_with_nuitka.sh
extra-scripts/: README.md
extra-scripts/get-whois-server-list/: main.py  requirements-dev.txt  requirements.txt
extra-scripts/get-whois-server-list/build-scripts/: build_with_nuitka.bat  build_with_nuitka.sh
extra-scripts/get_whois_server_list/: main.py
extra-scripts/travellings-cn-api/: main.py  requirements.txt
extra-scripts/travellings-cn-api/build-scripts/: build_with_nuitka.bat  (+1 more)
plugins/: whois21.py
plugins/async_query/: __init__.py  whois_server_list.py
plugins/socket_query/: __init__.py  whois_server_list.py
plugins/sync_query/: __init__.py
plugins/whois21_query/: __init__.py
src/: __init__.py  main.py
src/commands/: __init__.py  _parser.py
src/defined_types/: _parsed_whois_data.py  _plugin_data_structure.py
src/plugin_caller/: __call_plugin_method.py  __init__.py
src/plugin_manager/: __init__.py  _plugin_manger.py
src/utils/: constant.py  is_expired.py  logger.py  query_expired_date.py  result.py  text.py
src/whois_query_tool/: __call_plugin_method.py  __init__.py
tests/: test_datetime_checker.py  test_datetime_parser.py  test_whois_parser.py
(+16 files in other folders)
